2009-01-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Add the variable definitions of
	`w3m-tab-menubar-make-items-preitems' and `w3m-session-menu-items-pre'
	to avoid byte-compile warnings.
	(w3m-setup-menu): Move the postion of session menu.
	(w3m-mouse-major-mode-menu): Add session menu.

	* w3m-xmas.el (autoload): Add w3m-setup-session-menu.
	(w3m-menu-on-forefront): Treat "Session" menu.
	(w3m-setup-menu): Call `w3m-setup-session-menu'.

2008-12-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-select-buffer-mode-map): Bind `w3m-select-buffer-quit' to
	C-g.

	* w3m-session.el (w3m-session-select-mode-map): Bind
	`w3m-session-select-quit' to C-g.

	* w3m-form.el (w3m-form-input-select-keymap): Bind
	`w3m-form-input-select-keymap' to C-g.
	(w3m-form-input-map-keymap): Bind `w3m-form-input-map-exit' to C-g.

2008-12-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-session.el (w3m-session-select-mode-map): Add new key.
	(w3m-session-select-mode): Modify doc-string.
	(w3m-session-select-rename): New command.
	(w3m-session-rename): New function.

2008-12-17  Naohiro Aota  <naota@elisp.net>

	* w3m.el (autoload): Add w3m-setup-session-menu.
	(w3m-menubar): Moved session menu to w3m-session-menu-items.
	(top): Call w3m-setup-session-menu.

	* w3m-session.el: Change to use major mode; Add session menu.
	(w3m-session-unknown-title): New option.

2008-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-compatible-encoding-alist): Add (gb2312 . gbk).

2008-12-12  David Engster  <dengste@eml.cc>

	* w3m-proc.el (w3m-process-wait-process): Reduce sit-for time.
	(w3m-process-sentinel): Wait for process output (on Emacs only).

2008-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-redirection-error-information): Improve the
	error message.

2008-12-10  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-next-anchor): Go to the first anchor when next
	anchor is not found.